--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "font-awesome": "^4.7.0",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.17.3"
+    "vuetify": "^0.17.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
