--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "prerender-spa-plugin": "^2.1.0",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.3",
