--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
+    "es6-promise": "^4.2.2",
     "font-awesome": "^4.7.0",
     "prerender-spa-plugin": "^2.1.0",
     "vue": "^2.5.3",
