--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
