--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.0.5",
+    "webpack-bundle-analyzer": "^4.4.1"
   }
 }
