--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "sitemap-webpack-plugin": "^1.1.0",
     "style-resources-loader": "^1.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
